--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -19,6 +20,9 @@ android {
     }
     buildFeatures {
         viewBinding = true
+    }
+    dataBinding {
+        enabled = true
     }
 
     buildTypes {
